--- a/template/package.json
+++ b/template/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@miblanchard/react-native-slider": "^2.1.0",
-    "@react-native-community/async-storage": "@latest",
+    "@react-native-community/async-storage": "latest",
     "@react-native-community/datetimepicker": "^6.3.1",
     "@react-native-community/netinfo": "^9.3.7",
     "@react-navigation/drawer": "^6.4.4",
